fix spacing on iphone

--- a/src/styles/base/_generic.scss
+++ b/src/styles/base/_generic.scss
@@ -3,7 +3,7 @@
 $render-mode: optimizeLegibility !default;
 
 $body-min-width: 300px !default;
-$body-font-size: 16pt !default;
+$body-font-size: 16px !default;
 $body-line-height: 1.5 !default;
 $body-weight: $font-weight-normal !default;
 $body-overflow-x: hidden !default;
